# quantem

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: check-pr-main-version.yml  deploy.yml  ensure-from-dev-release.yml  ruff.yml  sync-dev-main.yml  uv-pytests.yml
quantem/: __init__.py
quantem/core/: config.py  quantem.yaml
quantem/core/datastructures/: __init__.py  dataset.py  dataset2.py  dataset2d.py  dataset3d.py  dataset4d.py  dataset4dstem.py  vector.py
quantem/core/io/: __init__.py  file_readers.py  serialize.py
quantem/core/ml/: cnn3d.py
quantem/core/utils/: array_funcs.py  imaging_utils.py  scattering_utils.py  utils.py  utils2.py  utils_imaging.py  validators.py
quantem/core/visualization/: __init__.py  (+4 more)
quantem/dataset/: dataset.py
quantem/diffractive_imaging/: complexprobe.py  converged_probe.py  detector_models.py  object_models.py  probe_models.py  ptycho_utils.py  ptychography.py  ptychography_ad.py  ptychography_base.py  ptychography_constraints.py  ptychography_dataset.py  ptychography_gd.py  ptychography_ml.py  ptychography_visualizations.py
quantem/imaging/: drift.py
quantem/io/: __init__.py  serialize.py  setup.py
quantem/tomography/: dataset_tomo.py  recon.py  recon_old.py  tilt_series_dataset.py  tomography.py  tomography_base.py  tomography_conv.py  tomography_ml.py  utils.py
scripts/: compare-python-versions.py
tests/: _test_demo_with_fails.py  test_demo.py  test_validation.py
tests/datastructures/: test_autoserialize.py  test_dataset.py  test_vector.py
tests/visualization/: test_custom_normalizations.py  test_visualization.py  test_visualization_utils.py
(+72 files in other folders)
