[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "quantem"
version = "0.1.0"
description = "quantitative electron microscopy analysis toolkit"
keywords = ["EM","TEM","STEM","4DSTEM"]
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
  "colorspacious",
  "dill",
  "numpy>2",
  "matplotlib",
  "scipy",
  "tqdm",
  "zarr",
  "cmasher>=1.9.2",
  "cowsay>=6.1",
]
